<resources>
    <!-- Global -->
    <string name="app_name">Notebook</string>
    <string name="delete_all_notes">Удалить все</string>
    <string name="menu_delete_note">Удалить</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="change">Изменить</string>
    <string name="attention">Внимание!</string>
    <string name="undo">Отменить</string>

    <!-- Note Main Fragment Strings -->
    <string name="no_created_notes">У вас нет созданных заметок</string>
    <string name="dark_mode_main_menu">Поменять тему</string>
    <string name="create_a_note">Создать заметку</string>
    <string name="note_was_deleted">Заметка удалена</string>
    <string name="confirm_delete_all_notes_message">Вы уверены что хотите удалить все заметки?</string>
    <string name="all_notes_were_deleted">Все заметки были удалены</string>
    <string name="search_note_hint">Найти заметку</string>
    <string name="empty_search_result_message">Заметки не найдены</string>
    <string name="cancel_note_deletion_message">Заметка была удалена</string>
    <string name="cancel_all_notes_deletion_message">Заметки были удалены</string>
    <string name="note_created_day_type_today">Сегодня</string>
    <string name="note_created_day_type_yesterday">Вчера</string>

    <!-- Note Add Edit Fragment -->
    <string name="header_edit_text">Заголовок</string>
    <string name="start_typing_hint">Начните писать</string>
    <string name="empty_header_and_description_error_message">Заголовок и тело заметки не должны быть пустыми!</string>
    <string name="empty_header_error_message">Заголовок не должен пустым!</string>
    <string name="empty_desc_error_message">Тело заметки не должно быть пустым!</string>

    <!-- Dark Mode Chooser Dialog Strings -->
    <string name="dark_mode_chooser_title">Выберите тему для приложения</string>
    <string name="dark_mode_chooser_dark_theme">Темная тема</string>
    <string name="dark_mode_chooser_light_theme">Светлая тема</string>
    <string name="dark_mode_chooser_system_adapt">Адаптироваться под систему</string>
</resources>