<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/note_add_edit_fragment_background_color"
        tools:context=".view.DarkModeChooserDialog">

        <TextView
            android:id="@+id/dark_mode_chooser_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/dark_mode_chooser_title"
            android:textColor="@color/adaptive_text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dark_mode_chooser_line_separator_top"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/separator_line_color"
            app:layout_constraintEnd_toEndOf="@id/dark_mode_chooser_title_text_view"
            app:layout_constraintStart_toStartOf="@id/dark_mode_chooser_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/dark_mode_chooser_title_text_view" />

        <RadioGroup
            android:id="@+id/dark_mode_chooser_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dark_mode_chooser_line_separator_top">

            <RadioButton
                android:id="@+id/dark_mode_chooser_dark_mode_button"
                style="@style/DarkModeRadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_chooser_dark_theme"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/dark_mode_chooser_light_mode_button"
                style="@style/DarkModeRadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_chooser_light_theme" />

            <RadioButton
                android:id="@+id/dark_mode_chooser_system_adapt_button"
                style="@style/DarkModeRadioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_chooser_system_adapt" />
        </RadioGroup>

        <TextView
            android:id="@+id/dark_mode_chooser_apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_medium"
            android:padding="16dp"
            android:text="@string/apply"
            android:textColor="@color/toolbar_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dark_mode_chooser_radio_group" />

        <TextView
            android:id="@+id/dark_mode_chooser_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_medium"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textColor="@color/cancel_color"
            app:layout_constraintEnd_toStartOf="@id/dark_mode_chooser_apply_button"
            app:layout_constraintTop_toBottomOf="@id/dark_mode_chooser_radio_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>